Adjust code for eliminating warnings